feat: implement group archiving
